@@ -4,6 +4,8 @@
 ![Screenshot](screenshot1.png)
 ![Screenshot](screenshot2.png)
 
+Настройки проекта
+
 ![Screenshot](screenshot3.png)
 
 ![Screenshot](screenshot4.png)
@@ -13,4 +15,9 @@
 
 ```
 --module-path /snap/openjfx/current/sdk/lib --add-modules javafx.controls,javafx.fxml 
+```
+
+Запуск
+```
+java --module-path /snap/openjfx/current/sdk/lib --add-modules javafx.controls,javafx.fxml -jar ./dist/JavaFX_MultiForms_2021.jar
 ```
